@@ -23,40 +23,38 @@ import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.party.server.control.PartyControl;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.model.data.geo.server.entity.GeoCodeTimeZone;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
 @Dependent
 public class GetGeoCodeTimeZoneCommand
-        extends BaseSimpleCommand<GetGeoCodeTimeZoneForm> {
+        extends BaseSingleEntityCommand<GeoCodeTimeZone, GetGeoCodeTimeZoneForm> {
     
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.GeoCodeTimeZone.name(), SecurityRoles.Review.name())
-                        )))
-                )));
+                        ))
+                ));
         
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+        FORM_FIELD_DEFINITIONS = List.of(
                 new FieldDefinition("GeoCodeName", FieldType.ENTITY_NAME, true, null, null),
                 new FieldDefinition("JavaTimeZoneName", FieldType.TIME_ZONE_NAME, true, null, null)
-                ));
+                );
     }
     
     /** Creates a new instance of GetGeoCodeTimeZoneCommand */
@@ -64,24 +62,26 @@ public class GetGeoCodeTimeZoneCommand
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, false);
     }
     
+    @Inject
+    GeoControl geoControl;
+
+    @Inject
+    PartyControl partyControl;
+
     @Override
-    protected BaseResult execute() {
-        var geoControl = Session.getModelController(GeoControl.class);
-        var result = GeoResultFactory.getGetGeoCodeTimeZoneResult();
+    protected GeoCodeTimeZone getEntity() {
         var geoCodeName = form.getGeoCodeName();
         var geoCode = geoControl.getGeoCodeByName(geoCodeName);
-        
+        GeoCodeTimeZone geoCodeTimeZone = null;
+
         if(geoCode != null) {
-            var partyControl = Session.getModelController(PartyControl.class);
             var javaTimeZoneName = form.getJavaTimeZoneName();
             var timeZone = partyControl.getTimeZoneByJavaName(javaTimeZoneName);
-            
+
             if(timeZone != null) {
-                var geoCodeTimeZone = geoControl.getGeoCodeTimeZoneForUpdate(geoCode, timeZone);
-                
-                if(geoCodeTimeZone != null) {
-                    result.setGeoCodeTimeZone(geoControl.getGeoCodeTimeZoneTransfer(getUserVisit(), geoCodeTimeZone));
-                } else {
+                geoCodeTimeZone = geoControl.getGeoCodeTimeZoneForUpdate(geoCode, timeZone);
+
+                if(geoCodeTimeZone == null) {
                     addExecutionError(ExecutionErrors.UnknownGeoCodeTimeZone.name(), geoCodeName, javaTimeZoneName);
                 }
             } else {
@@ -90,7 +90,18 @@ public class GetGeoCodeTimeZoneCommand
         } else {
             addExecutionError(ExecutionErrors.UnknownGeoCodeName.name(), geoCodeName);
         }
-        
+
+        return geoCodeTimeZone;
+    }
+
+    @Override
+    protected BaseResult getResult(GeoCodeTimeZone geoCodeTimeZone) {
+        var result = GeoResultFactory.getGetGeoCodeTimeZoneResult();
+
+        if(geoCodeTimeZone != null) {
+            result.setGeoCodeTimeZone(geoControl.getGeoCodeTimeZoneTransfer(getUserVisit(), geoCodeTimeZone));
+        }
+
         return result;
     }
     
